# Pandora_plugin_mccnn

./: .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  AUTHORS.md  Authors.md  CHANGELOG.md  MANIFEST.in  NOTICE  README.md  pyproject.toml  setup.cfg  setup.py  sonar-project.properties
.github/workflows/: pandora_plugin_mccnn.yml
conf/: mc_cnn_accurate.json  mc_cnn_fast.json
doc/: Makefile  make.bat  requirements.txt
doc/source/: conf.py  getting_started.rst  index.rst
pandora_plugin_mc_cnn/: __init__.py  plugin_mc_cnn.py
plugin_mc_cnn/: plugin_mc_cnn.py
test/: test_cfg_accurate.json
tests/: __init__.py  conftest.py  test_cfg_accurate.json  test_cfg_mccnn_fast.json  test_cfg_mccnn_fast_default_values.json  test_cfg_mccnn_fast_multiband.json  test_check_configuration.py  test_plugin.py
tests/image/: __init__.py
tests/weights/: mc_cnn_fast_int8_excl_01.onnx
weights/: mc_cnn_fast_data_fusion_contest.pt  mc_cnn_fast_ours_data_fusion_contest.pt
