#!/usr/bin/env python
# coding: utf8
#
# Copyright (c) 2021 Centre National d'Etudes Spatiales (CNES).
#
# This file is part of Pandora plugin MC-CNN
#
#     https://github.com/CNES/Pandora_plugin_mccnn
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Pandora plugin MC-CNN setup configuration file

# package setup main metadata
[metadata]
name = pandora_plugin_mccnn
description = Pandora plugin to create the cost volume with the neural network mc-cnn
long_description_content_type = text/markdown
author = CNES
author_email = myriam.cournet@cnes.fr
url = https://github.com/CNES/Pandora_plugin_mccnn
license = Apache License 2.0
license_file = LICENSE

[options]
python_requires = >=3.6

setup_requires =
    setuptools_scm # Following https://pypi.org/project/setuptools-scm/

# Pandora plugin MC-CNN packages dependencies
install_requires =
    numpy
    MCCNN==1.0.0
    pandora>=1.0.0
    xarray
    json-checker

package_dir =
    . = plugin_mc-cnn
packages = find:


[options.extras_require]
dev =
    pytest
    pytest-cov
    pylint
    pre-commit
    black
docs =
    sphinx
    sphinx_rtd_theme
    sphinx_autoapi

# Pandora plugin MC-CNN entry points cli scripts
[options.entry_points]
pandora.plugin =
    pandora_plugin_mc_cnn = pandora_plugin_mc_cnn.plugin_mc_cnn:MCCNN
